# interesting-graphs

./: .gitignore  Cargo.toml  README.md  README.testing.md  cleanup_ports.sh  dev_cleanup.sh  example_env_file.sh  rust-toolchain.toml
docs/guides/: 01.md  02_cytograph.md  database_init.md  init.md  list_test.md
repo_src/backend/: Cargo.toml
repo_src/backend/src/: main.rs
repo_src/frontend/: Cargo.toml  index.html
repo_src/frontend/migrations/: 0001_create_items_table.sql
repo_src/frontend/public/: .gitkeep
repo_src/frontend/public/data/: book_tech_links.csv  books.csv  technologies.csv
repo_src/frontend/public/js/: cytoscape_renderer.js  graph_renderer.js
repo_src/frontend/src/: app.rs  app_component.rs  database.rs  error_template.rs  lib.rs  server_fns.rs
repo_src/frontend/src/components/: item_form.rs  item_list.rs  mod.rs  nav.rs  tech_graph_view.rs
repo_src/frontend/src/pages/: home.rs  mod.rs  tech_graph_page.rs
repo_src/frontend/style/: graph.css  main.css
repo_src/shared/: Cargo.toml
repo_src/shared/src/: lib.rs
